<resources>
    <string name="app_name">Dome eMenu</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server">Server Configuration</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="suname">Server Username</string>
    <string name="spaswd">Server Password</string>
    <string name="_vieworder">View order</string>
    <string name="_promtiom">Subscriber</string>
    <string name="_reload">Reload</string>
    <string name="lname">Username</string>
    <string name="lpaswd">Password</string>
    <string name="ttl_network">Network Unavailable</string>
    <string name="no_network">Sorry, we are unable to complete your request without network connection. Please try again later.</string>
    <string name="auth">Please enter a valid username and password.</string>
    <string name="missing"> Please fill in all of the required fields.</string>
    <string name="rcode">Reg Code</string>
    <string name="ccode">Company Code</string>
    <string name="ocode">Outlet Code</string>
    <string name="aut_alert">Fields Missing</string>
    <string name="cread"> Fail to connect, please check your credentials and try again.</string>
    <string name="netw">No network available please try again later.</string>
    <string name="default_currency"> S$</string>
    <string name="chose"> Select one of the following options.</string>
    <string name="hint_re">Choose remarks</string>
    <string name="remw">Write  remarks </string>
    <string name="nam">Name</string>
    <string name="eml">Email</string>
    <string name="ad">Address</string>
    <string name="mob">Mobile</string>
    <string name="select">Please select all the options before placing  an order.</string>
    <string name="rate">Please rate the following on a scale of 1 – 10(1 being poor and 10 being excellent).</string>
    <string name="fq">Food Quality</string>
    <string name="es">Efficiency of service</string>
    <string name="tst">Taste</string>
    <string name="frnd">Friendliness</string>
    <string name="adf">Additional comments and feedback</string>
    <string name="stf">Our staff is preparing bill.\nIn mean time, please share your feedback.</string>
    <string name="mno">Menu offering</string>
    <string name="mk">Menu knowledge</string>
    <string name="sr">services</string>
    <string name="noOrd">There is no items in your order. please add the items.</string>
    <string name="nOrd"> Please choose items from the list, Fire to Kitchen.</string>
    <string name="rem">REMARKS </string>
    <string name="encdq">&lt;?xml version=\&quot;1.0\&quot; encoding=\&quot;UTF-8\&quot;?&gt;&lt;plist version=\&quot;1.0\&quot;&gt;&lt;array&gt;</string>
    <string name="encdtaiq">&lt;/array&gt;&lt;/plist&gt;</string>
    <string name="failOrder">Fail to order. please  try again .</string>
    <string name="sOrder"> Thank You! \n Your order has been  sent to our kitchen \n for preparation</string>
    <string name="fireOrder">Your order has been  Fire to our kitchen  Successfully</string>

    <string name="myOrder"> Loading Orders...</string>
    <string name="remrk">Remark&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; </string>

    <string name="prom">There is currently no promotion available. Please visit us again for future promotion.</string>
</resources>
